# marine-model-processing

./: .gitignore  README.md  pyproject.toml
niva/: EswmRaster_classified_clipped.gpkg-journal  eswm_en.qml
notebooks/: pipeline.ipynb  stortare.ipynb  sukkertare.ipynb  wave_model.ipynb  waves.ipynb
scripts/: deliver_to_mdir.sh  generate_tare_raster_qml.py  generate_vector_qml.py  qml_to_lyrx.py
stylesheets/: EswmRasterFillClassesEN.lyrx  EswmRasterFillClassesNO.lyrx  EswmRasterFillFloatEN.lyrx  EswmRasterFillFloatNO.lyrx  EswmRaster_classified_clipped_en.lyrx  EswmRaster_classified_clipped_no.lyrx  EswmRaster_filled_clipped_en.lyrx  EswmRaster_filled_clipped_no.lyrx  EswmRaster_filled_clipped_no.qml  boelgeeksponering_nin_basistrinn_norge_2004_25833_EN.lyrx  boelgeeksponering_nin_basistrinn_norge_2004_25833_NO.lyrx  boelgeeksponering_nin_basistrinn_norge_2004_25833_NO.qml  boelgeeksponering_nin_basistrinn_norge_2004_25833_en.lyrx  boelgeeksponering_nin_basistrinn_norge_2004_25833_no.lyrx  boelgeeksponering_nin_basistrinn_norge_2004_25833_raster_en.lyrx  boelgeeksponering_nin_basistrinn_norge_2004_25833_raster_en.qml  boelgeeksponering_nin_basistrinn_norge_2004_25833_raster_no.lyrx  boelgeeksponering_nin_basistrinn_norge_2004_25833_raster_no.qml  boelgeeksponering_nin_basistrinn_norge_2004_25833_vektor_en.lyrx  boelgeeksponering_nin_basistrinn_norge_2004_25833_vektor_no.lyrx  boelgeeksponering_nin_basistrinn_norge_2004_25833_vektor_no.qml  boelgeeksponering_nin_basistrinn_norge_raster_en.qml  boelgeeksponering_nin_basistrinn_norge_raster_no.qml  (+10 more)
waves/: __init__.py  (+9 more)
(+9 files in other folders)
